<resources>
    <string name="app_name">ReversiW</string>
    <string name="titulo">Reversi World</string>
    <string name="desarrollado_por">Desarrollado por:</string>
    <string name="boton_entrar">JUGAR</string>
    <string name="logoImg">logo</string>
    <string name="boton_ayuda">Ayuda</string>
    <string name="boton_abandonar">Abandonar</string>
    <string name="boton_salir">Salir</string>
    <string name="texto_instrucciones">Instrucciones</string>
    <string name="texto_puntuaciones">Puntuaciones</string>
    <string name="puntuaciones_nombre">Nombre</string>
    <string name="puntuaciones_puntuacion_txt" >Puntos</string>
    <string name="fecha_txt" >Fecha</string>
    <string name="valor_puntuacion">0</string>
    <string name="menuSalir">Salir</string>
    <string name="menuAcercaDe">Acerca de</string>
    <string name="menuConfiguracion">Configuracion</string>
    <string name="textoReiniciar">Reiniciar</string>
    <string name="btn_puntuaciones">Puntuaciones</string>
    <string-array name="btn_dificultadArray">
        <item>Dificultad: Fácil</item>
        <item>Dificultad: Normal</item>
        <item>Dificultad: Difícil</item>
    </string-array>
    <string name="input_dialog_nickname">Introduce tu nombre</string>
    <string name="btn_instrucciones">Instrucciones</string>
    <string name="btn_dificultarDefecto">Dificultad: Fácil</string>
    <string name="guardarPuntuaciones">Guardar</string>
    <string name="puntuacionesNombre">Nombre</string>
    <string name="puntuacionesPuntosProp">Puntos</string>
    <string name="puntuacionesTotal">Total</string>
    <string name="puntuacionesFecha">Fecha</string>
    <string name="txt_tuto_intro">En este breve tutorial veremos como desde un estado determinado del tablero, podemos mover, solicitar ayuda y ver el resultado final del movimiento.</string>
    <string name="txt_tuto_premov">Aqui vemos como las blancas dominan a las negras, pero ahora es el turno de las fichas negras.</string>
    <string name="txt_tuto_ayuda">Ahora podremos pulsar el boton superior de \"Ayuda\" para obtener información de todos los movimientos posibles horizontal, vertical o diagonal.</string>
    <string name="txt_tuto_postmov">Tras realizar nuestro movimiento, vemos como ahora tenemos mayor numero de fichas negras que blancas. Ahora es el turno de las blancas.</string>
    <string name="txt_tuto_final" >El objetivo principal del juego es llegar a tener un numero superior de fichar que tu contrincante. Hay muchas estrategias posibles como capturar las esquinas, lo que da un control sobre el juego, evitar las zonas colindantes a las esquinas, pues son puntos debiles, y muchas mas que puedes descubrir tu mismo.</string>
    <string name="btn_cerrar">Cerrar</string>
    <string name="noticias">Noticias</string>
    <string name="news_prompt_header">NOTICIAS</string>
    <string name="url">http://192.168.100.7</string>
    <string name="author">Juan Francisco Diaz Gomez</string>
    <string name="descripcion">Aplicación desarrollada como proyecto final del modulo Programacion Multimedia y Dispositivos de 2º Curso de Desarrollo de aplicaciones multiplataforma en el I.E.S Poeta Paco Molla 2017</string>
    <string name="boton_reiniciar">Reiniciar</string>
</resources>
