<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_acerca_de"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.quantumdeers.reversiw.Acerca_de"
    android:background="@color/fondo_principal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/desarrollado_por"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:fontFamily="casual"
            android:textSize="36sp"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:layout_marginTop="100dp" />

        <TextView
            android:text="@string/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView17"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_marginTop="10dp" />

        <TextView
            android:text="@string/descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView19"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp" />

    </LinearLayout>
</RelativeLayout>
