<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.quantumdeers.reversiw.Principal"
    android:background="@color/fondo_principal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true">

        <TextView
            android:text="@string/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="36sp"
            android:textAlignment="center"
            android:typeface="monospace"
            android:fontFamily="casual"
            android:layout_marginTop="100dp" />

        <TextView
            android:text="@string/desarrollado_por"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textAlignment="center"
            android:layout_marginTop="60dp"
            android:textSize="14sp"
            android:fontFamily="monospace"
            android:textStyle="normal|bold" />

        <Button
            android:text="@string/boton_entrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:textSize="24sp" />

    </LinearLayout>

</RelativeLayout>
