<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_juego"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.quantumdeers.reversiw.Juego"
    android:background="@color/fondo_principal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/logoImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:layout_weight="1"
                android:textAlignment="center" />

            <TextView
                android:text="@string/valor_puntuacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:layout_weight="1"
                android:textAlignment="center" />

            <Button
                android:text="@string/boton_ayuda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:layout_weight="1" />

            <TextView
                android:text="@string/valor_puntuacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_weight="1"
                android:textAlignment="center" />

            <TextView
                android:text="@string/logoImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:layout_weight="1"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/color_tablero"
            android:padding="5dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="65dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button65"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@color/cuadrado_tablero_oscuro" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button64"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@color/cuadro_tablero_claro" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button66"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@color/cuadrado_tablero_oscuro" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button67"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@color/cuadro_tablero_claro" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button63"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@color/cuadrado_tablero_oscuro" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="65dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button70"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@color/cuadro_tablero_claro" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button62"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@color/cuadrado_tablero_oscuro" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button68"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@color/cuadro_tablero_claro" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button61"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@color/cuadrado_tablero_oscuro" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button69"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@color/cuadro_tablero_claro" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="65dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button60"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@color/cuadrado_tablero_oscuro" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button71"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@color/cuadro_tablero_claro" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button59"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@color/cuadrado_tablero_oscuro" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button72"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@color/cuadro_tablero_claro" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button58"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@color/cuadrado_tablero_oscuro" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="65dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button75"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@color/cuadro_tablero_claro" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button56"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@color/cuadrado_tablero_oscuro" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button73"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@color/cuadro_tablero_claro" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button57"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@color/cuadrado_tablero_oscuro" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button74"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@color/cuadro_tablero_claro" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="65dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button40"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@color/cuadrado_tablero_oscuro" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button76"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@color/cuadro_tablero_claro" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button54"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@color/cuadrado_tablero_oscuro" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button77"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@color/cuadro_tablero_claro" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button55"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@color/cuadrado_tablero_oscuro" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:weightSum="1">

            <Button
                android:text="@string/boton_abandonar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/button3"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
